# bitfinex-api-py

./: .commitlintrc.json  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  gitleaks.toml  pyproject.toml
.claude/rules/: autonomy-contract.md  bitfinex-api.md  blazor-server.md  cloudflare-worker.md  copilot-review-workflow.md  dotnet-auth.md  git-hooks.md  github-app.md  hono-cloudflare.md  microsoft-graph.md  plan-file-lifecycle.md  tailwind.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  commitlint.yml  copilot-reviewer.yml  secret-scan.yml
bfxapi/: _client.py
bfxapi/_utils/: json_decoder.py  json_encoder.py  logging.py
bfxapi/rest/: _bfx_rest_interface.py
bfxapi/rest/_interface/: interface.py  middleware.py
bfxapi/rest/_interfaces/: rest_auth_endpoints.py  rest_public_endpoints.py
bfxapi/types/: dataclasses.py  labeler.py  notification.py  serializers.py
bfxapi/websocket/: _connection.py  subscriptions.py
bfxapi/websocket/_client/: bfx_websocket_bucket.py  bfx_websocket_client.py  bfx_websocket_inputs.py
bfxapi/websocket/_event_emitter/: bfx_event_emitter.py
bfxapi/websocket/_handlers/: auth_events_handler.py  public_channels_handler.py
tests/: test_event_emitter.py  test_json_decoder.py  test_json_encoder.py  test_labeler.py  test_rest_middleware.py  test_serializers.py  test_websocket_client.py  test_websocket_connection.py  test_websocket_handlers.py
