[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bitfinex-api-py"
version = "5.0.0"
description = "Official Bitfinex Python API"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Bitfinex", email = "support@bitfinex.com" },
]
keywords = ["bitfinex", "api", "trading"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pyee~=13.0",
    "websockets~=16.0",
    "requests~=2.32.3",
]

[project.optional-dependencies]
typing = [
    "types-requests~=2.32.4",
]
dev = [
    "mypy~=1.19.0",
    "types-requests~=2.32.4",
    "ruff~=0.15.0",
    "pre-commit~=4.5.0",
    "pytest~=9.0",
    "pytest-asyncio~=1.3.0",
    "pytest-mock~=3.15.0",
]

[project.urls]
Homepage = "https://github.com/JCBauza/bitfinex-api-py"
"Bug Reports" = "https://github.com/JCBauza/bitfinex-api-py/issues"
Source = "https://github.com/JCBauza/bitfinex-api-py"

[tool.hatch.build.targets.wheel]
packages = ["bfxapi"]

[tool.ruff]
target-version = "py310"
line-length = 80

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "I",   # isort
]
ignore = ["E203", "E501", "E701"]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["bfxapi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
